[gd_scene load_steps=2 format=3 uid="uid://qeitfgj53ewa"]

[ext_resource type="Script" path="res://hud.gd" id="1_rp0qk"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_rp0qk")

[node name="TagButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -850.0
offset_top = -568.0
offset_right = -362.0
offset_bottom = -223.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 250
text = "TAG"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Message" type="Label" parent="."]
offset_left = 2680.0
offset_top = 1032.0
offset_right = 5216.0
offset_bottom = 1717.0
theme_override_font_sizes/font_size = 500

[connection signal="pressed" from="TagButton" to="." method="_on_tag_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="TagButton" method="_on_message_timer_timeout"]
